✨ 添加 Font Awesome 样式表并优化搜索功能

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>原神导航</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="assets/basic/icon.svg">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <header class="top-header">
@@ -16,7 +17,11 @@
                 <li><a href="#launch">基本信息</a></li>
                 <li><a href="#guide">攻略</a></li>
                 <li><a href="#contact">联系我们</a></li>
-                <li><input type="text" placeholder="今天想搜点什么？" id="search-input"></li>
+                <li>
+                    <form>
+                        <input type="text" placeholder="今天想搜点什么？" id="search-input">
+                    </form>
+                </li>
             </ul>
         </nav>
     </header>
@@ -54,13 +59,6 @@
                         <p>不用下载，随时随地原神启动！</p>
                     </div>
                 </a>
-                <a href="https://ys.mihoyo.com/cloud/?utm_source=default#/download" class="link" target="_blank">
-                    <img src="assets/icons/links/cloudys.png" alt="网页版云原神">
-                    <div class="link-text">
-                        <h4>下载云原神客户端</h4>
-                        <p>超小体积，随时随地原神启动！</p>
-                    </div>
-                </a>
                 <a href="https://www.miyoushe.com/ys/" class="link" target="_blank">
                     <img src="assets/icons/links/miyoushe.png" alt="米游社原神板块">
                     <div class="link-text">
@@ -84,42 +82,42 @@
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://wiki.biligame.com/ys/%E9%A6%96%E9%A1%B5" class="link" target="_blank">
+                <a href="https://wiki.biligame.com/ys/%E9%A6%96%E9%A1%B5"  class="link" target="_blank">
                     <img src="assets/icons/links/blbl_yswiki.png" alt="观测枢">
                     <div class="link-text">
                         <h4>B站原神WIKI</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://baike.mihoyo.com/ys/obc/" class="link" target="_blank">
+                <a href="https://baike.mihoyo.com/ys/obc/"  class="link" target="_blank">
                     <img src="assets/icons/links/guanceshu.png" alt="观测枢">
                     <div class="link-text">
                         <h4>原神观测枢</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://act.mihoyo.com/ys/app/interactive-map/index.html" class="link" target="_blank">
+                <a href="https://act.mihoyo.com/ys/app/interactive-map/index.html"  class="link" target="_blank">
                     <img src="assets/icons/links/map.png" alt="原神地图">
                     <div class="link-text">
                         <h4>提瓦特大地图</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://space.bilibili.com/1773346/channel/series" class="link" target="_blank">
+                <a href="https://space.bilibili.com/1773346/channel/series"  class="link" target="_blank">
                     <img src="assets/icons/links/2a973191e45f611699c85d404baee50163a6f2ec.jpg@240w_240h_1c_1s_!web-avatar-space-header.avif" alt="莴苣妈">
                     <div class="link-text">
                         <h4>莴苣妈的攻略合集</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://space.bilibili.com/431073645/channel/series" class="link" target="_blank">
+                <a href="https://space.bilibili.com/431073645/channel/series"  class="link" target="_blank">
                     <img src="assets/icons/links/2e32de7b28fc491a28281a22c6ea9f5d195cbdf5.jpg@240w_240h_1c_1s_!web-avatar-space-header.avif" alt="月月妈">
                     <div class="link-text">
                         <h4>月月妈的攻略合集</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://space.bilibili.com/635041/channel/series" class="link" target="_blank">
+                <a href="https://space.bilibili.com/635041/channel/series"  class="link" target="_blank">
                     <img src="assets/icons/links/78ad313b067f95c5df82250653a508b796b02918.jpg@240w_240h_1c_1s_!web-avatar-space-header.avif" alt="紫薇妈">
                     <div class="link-text">
                         <h4>紫薇妈的攻略合集</h4>
@@ -133,7 +131,7 @@
     <footer>
         <p>© 2024-2025 原神导航</p>
     </footer>
+
+    <script src="js/search.js"></script>
 </body>
 </html>
-
-<script src="js/search.js"></script>
