✨ 优化导航栏样式，调整链接颜色和悬停效果，更新外部链接

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="top-nav">
             <ul>
                 <img src="assets/basic/logo.png" alt="原神">
-                
+
                 <li><a href="#main" class="nav-link">首页</a></li>
                 <li><a href="#launch" class="nav-link">基本信息</a></li>
                 <li><a href="#guide" class="nav-link">攻略</a></li>
@@ -99,10 +99,17 @@
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
-                <a href="https://baike.mihoyo.com/ys/obc/"  class="link" target="_blank">
+                <a href="https://www.taptap.cn/app/168332/strategy"  class="link" target="_blank">
                     <img src="assets/icons/links/guanceshu.png" alt="观测枢">
                     <div class="link-text">
                         <h4>原神观测枢</h4>
+                        <p>你说得对但是原神是一款由...</p>
+                    </div>
+                </a>
+                <a href="https://baike.mihoyo.com/ys/obc/"  class="link" target="_blank">
+                    <img src="https://th.bing.com/th?id=ODLS.a08f85d8-6868-4dab-9dab-0b51f308410f&w=32&h=32&qlt=97&pcl=fffffa&o=6&pid=1.2" alt="观测枢">
+                    <div class="link-text">
+                        <h4>TapTap攻略区</h4>
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
