✨ 优化页脚样式，添加运行时间显示和链接，更新 CSS 样式

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
                 <li><a href="#main" class="nav-link">首页</a></li>
                 <li><a href="#launch" class="nav-link">基本信息</a></li>
-                <li><a href="#guide" class="nav-link">攻略</a></li>
-                <li><a href="#contact" class="nav-link">联系我们</a></li>
-                <li>
+                <li><a href="#guide" class="nav-link">攻略</a></li>                <li>
                     <form>
                         <input type="text" placeholder="今天想搜点什么？" id="search-input">
                     </form>
@@ -146,7 +144,17 @@
     </main>
 
     <footer>
-        <p>© 2024-2025 原神导航</p>
+        <div class="footer-links">
+            <a href="https://github.com/haitang000/ysnav">帮助我们进行开发</a>
+            <span>|</span>
+            <a href="mailto:haitang.36038@qq.com">添加更多链接</a>
+        </div>
+        <div class="footer-text">
+            <p>© 2024-2025 原神导航</p>
+            <p id="sitetime">本站已运行-年-月-日-小时-分钟-秒</p>
+        </div>
+
+        <a></a>
     </footer>
 
 
@@ -155,3 +163,4 @@
 
 <script src="js/search.js"></script>
 <script src="js/nav.js"></script>
+<script src="js/sitetime.js"></script>
