--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/aa17b4b6b9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>原神导航</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="assets/basic/icon.svg">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <header class="top-header">
@@ -14,12 +14,13 @@
             <ul>
                 <img src="assets/basic/logo.png" alt="原神">
 
-                <li><a href="#main" class="nav-link">首页</a></li>
-                <li><a href="#launch" class="nav-link">基本信息</a></li>
-                <li><a href="#guide" class="nav-link">攻略</a></li>                <li>
-                    <form>
-                        <input type="text" placeholder="今天想搜点什么？" id="search-input">
-                    </form>
+                <li><a href="#main" class="nav-link"><i class="fa-solid fa-house"></i>首页</a></li>
+                <li><a href="#launch" class="nav-link"><i class="fa-solid fa-folder-open"></i>基本信息</a></li>
+                <li><a href="#guide" class="nav-link"><i class="fa-solid fa-compass"></i>攻略</a></li>
+                <li>
+                <form>
+                    <input type="text" placeholder="✨ 今天想搜点什么？" id="search-input"></input>
+                </form>
                 </li>
             </ul>
         </nav>
@@ -28,7 +29,7 @@
     <main>
         <section id="main">
             <h1>欢迎使用原神导航</h1>
-            <a href="#launch" class="btn">开始探索</a>
+            <a href="#launch" class="btn">开始探索 <i class="fa-solid fa-right-long"></i></a>
         </section>
 
         <section id="launch" class="links-bg">
@@ -151,7 +152,9 @@
         </div>
         <div class="footer-text">
             <p>© 2024-2025 原神导航</p>
-            <p id="sitetime">本站已运行-年-月-日-小时-分钟-秒</p>
+            <div id="sitetime-container">
+                <i class="fa-solid fa-clock"></i><p id="sitetime">本站已运行-年-月-日-小时-分钟-秒</p>
+            </div>
         </div>
 
         <a></a>
