📦 修改电子邮箱地址

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="footer-links">
             <a href="https://github.com/haitang000/ysnav">帮助我们进行开发</a>
             <span>|</span>
-            <a href="mailto:haitang.36038@qq.com">添加更多链接</a>
+            <a href="mailto:addlink@haitang000.top">联系作者</a>
         </div>
         <div class="footer-text">
             <p>© 2024-2025 原神导航</p>
