✨ 优化链接样式，添加阴影效果和背景色；更新页脚链接，增加图标；修复搜索框标签

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#guide" class="nav-link"><i class="fa-solid fa-compass"></i>攻略</a></li>
                 <li>
                 <form>
-                    <input type="text" placeholder="✨ 今天想搜点什么？" id="search-input"></input>
+                    <input type="text" placeholder="✨ 今天想搜点什么？" id="search-input"/>
                 </form>
                 </li>
             </ul>
@@ -146,9 +146,9 @@
 
     <footer>
         <div class="footer-links">
-            <a href="https://github.com/haitang000/ysnav">帮助我们进行开发</a>
+            <a href="https://github.com/haitang000/ysnav"><i class="fa-solid fa-code"></i>帮助我们进行开发</a>
             <span>|</span>
-            <a href="mailto:addlink@haitang000.top">联系作者</a>
+            <a href="mailto:addlink@haitang000.top"><i class="fa-solid fa-envelope"></i>联系作者</a>
         </div>
         <div class="footer-text">
             <p>© 2024-2025 原神导航</p>
