✨ 添加原神相关链接，增加警告提示样式

--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
                         <p>你说得对但是原神是一款由...</p>
                     </div>
                 </a>
+                <a href="https://genshin-impact.fandom.com/zh/wiki/%E5%8E%9F%E7%A5%9E_Wiki"  class="link" target="_blank">
+                    <img src="https://ts4.cn.mm.bing.net/th?id=ODLS.9561a8df-2a5a-439d-a60f-55e32c79bdea&qlt=90&pcl=fffffa&o=6&pid=1.2&w=64h=64" alt="观测枢">
+                    <div class="link-text">
+                        <h4>原神玩家FandomWIKI</h4>
+                        <p><i id="warning" class="fa-solid fa-triangle-exclamation"></i> 建议使用广告拦截器后访问</p>
+                    </div>
+                </a>
+                <a href="https://gi.yatta.moe/chs"  class="link" target="_blank">
+                    <img src="https://ts4.cn.mm.bing.net/th?id=ODLS.0c50437c-de21-4ecf-af5c-ec6559c98435&w=32&h=32&qlt=96&pcl=fffffa&o=6&pid=1.2" alt="观测枢">
+                    <div class="link-text">
+                        <h4>安柏计划</h4>
+                        <p><i id="warning" class="fa-solid fa-triangle-exclamation"></i> 建议使用广告拦截器后访问</p>
+                    </div>
+                </a>
                 <a href="https://act.mihoyo.com/ys/app/interactive-map/index.html"  class="link" target="_blank">
                     <img src="assets/icons/links/map.png" alt="原神地图">
                     <div class="link-text">
